# design_patterns_head_first

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/: depenabot.yml
.github/workflows/: ci.yml
01_strategy/: ducks.py  main.py
01_strategy/behaviours/: fly.py  quack.py
02_observer/: interfaces.py  main.py  observers.py  subjects.py
03_decorator/: beverages.py  condiments.py  main.py
04_factory/: main.py
04_factory/abstract_factory/: ingredients.py  ingredients_factories.py  pizza_stores.py  pizzas.py  test_drive.py
04_factory/factory_method/: pizza_stores.py  pizzas.py  test_drive.py
05_singleton/: main.py  singleton.py
06_command/: commands.py  invokers.py  main.py  receivers.py
07_1_adapter/: adapters.py  main.py  turkeys.py
07_adapter/: ducks.py
08_facade/: devices.py  facades.py  main.py
09_template_method/: beverages.py  main.py
patterns/: __init__.py
patterns/chapter_01_strategy/: __init__.py  ducks.py  fly_behaviour.py  main.py  quack_behaviour.py
patterns/chapter_02_observer/: __init__.py  main.py  observers.py  subjects.py
patterns/chapter_03_decorator/: __init__.py  beverages.py  condiments.py  main.py
patterns/chapter_04_abstract_factory/: __init__.py  ingredients.py  ingredients_factories.py  main.py  pizza_stores.py  pizzas.py
patterns/chapter_04_factory_method/: __init__.py  main.py  pizza_stores.py  pizzas.py
patterns/chapter_05_singleton/: __init__.py  main.py  singleton.py
patterns/chapter_06_command/: __init__.py  commands.py  invokers.py  main.py  receivers.py
patterns/chapter_07_adapter/: __init__.py  adapters.py  ducks.py  main.py  turkeys.py
patterns/chapter_07_facade/: __init__.py  devices.py  facades.py  main.py
patterns/chapter_08_template_method/: __init__.py  beverages.py  main.py
patterns/chapter_09_composite/: __init__.py  humains.py  humans.py  main.py
patterns/chapter_09_iterator/: __init__.py  iterators.py  main.py  menus.py  waitress.py
patterns/chapter_10_state/: __init__.py  gumball_machine.py  main.py  state.py
patterns/chapter_11_proxy/: __init__.py  main.py  (+1 more)
(+17 files in other folders)
