[tool.poetry]
name = "design-patterns"
version = "0.1.0"
description = "Implementing design patterns from \"Head First Design Patterns: A brain-friendly g guide\""
authors = ["balancy <balancy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=patterns",
]

[tool.coverage.run]
omit = [
    "*/main.py",
]
parallel = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
exclude = [
    "07_adapter/*",
    "08_facade/*",
    "09_template_method/*",
]
